// Copyright 2018 The Goma Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package settings;

option go_package = "go.chromium.org/goma/server/proto/settings";

import "settings/settings.proto";

service SettingsService {
  rpc Get(SettingsReq) returns (SettingsResp) {}
}
